# mapmini

./: .gitmodules  CMakeLists.txt  OS-Style.xml  README.md  file.c  file.h  graphics.c  graphics.h  map.c  map.h
lib/: CMakeLists.txt
lib/agg_sdl2/: CMakeLists.txt  agg_hal.cpp  agg_hal.h  path.h
lib/fileio_posix/: CMakeLists.txt  io_posix.c  io_posix.h
lib/hagl_sdl2/: CMakeLists.txt  README.md  aa.c  aa.h  hagl_hal.c  hagl_hal.h  thick.c  thick.h
lib/hagl_sdl2/include/: hagl_hal.h
mapmini/: CMakeLists.txt
mapmini/include/: file.h  map.h  mem.h  memory.h  parse.h  way.h
mapmini/src/: CMakeLists.txt  file.c  floating.c  graphics.c  map.c  mem.c  memory.c  parse.c  way.c
test/: CMakeLists.txt  Makefile  demo.c  test
